26.1 - Update: Stability & Performance Improvements